# Asukaflight

./: .gitattributes  .gitignore  .gx12-default-profile  CMakeLists.txt  README.md  Start GX12 Launcher V3.bat  Start GX12 Launcher WPF.bat
apps/Gx12.Launcher.Wpf/: App.xaml  App.xaml.cs  Gx12.Launcher.Wpf.csproj  MainWindow.xaml  MainWindow.xaml.cs
apps/Gx12.Launcher.Wpf/Controls/: AboveBarSpriteBehavior.cs  HotkeyCapture.cs  OptionToolTips.cs  StickShapeEditor.cs  TooltipSpriteBehavior.cs
apps/Gx12.Launcher.Wpf/Models/: DeviceAssignmentStatus.cs  DiagnosticHistoryItem.cs  GameInputMouseDeviceRecord.cs  PlaybackBindingSettings.cs  ProfileBadge.cs  ProfileSettingDefinition.cs  ProfileSummary.cs  ReleaseCheckItem.cs  SettingCatalogRow.cs  SettingKind.cs  SettingTier.cs  StickShapeNode.cs  UiSettings.cs
apps/Gx12.Launcher.Wpf/Services/: AppPaths.cs  CompositionRoot.cs  GameInputMouseDeviceScan.cs  Gx12DiagnosticCommand.cs  Gx12DiagnosticLogStore.cs  Gx12DiagnosticResult.cs  Gx12DiagnosticsService.cs  Gx12EngineProfileValidator.cs  Gx12RuntimeService.cs  IProfileFolderPicker.cs  IProfileValidator.cs  IRecordingFilePicker.cs  ITooltipImagePicker.cs  LauncherDiagnostics.cs  OptionTooltipCatalog.cs  OptionTooltipInfo.cs  ProfileDirectoryService.cs  ProfileFolderPicker.cs  ProfileRepository.cs  ProfileSaveResult.cs  ProfileSchema.cs  ProfileValidationResult.cs  ProfileValueUpdate.cs  RecordingFilePicker.cs  ReleaseInfo.cs  StickShapeCurve.cs  TomlProfileDocument.cs  TooltipImageInfo.cs  TooltipImagePicker.cs  TooltipSpriteService.cs  UiSettingsService.cs
apps/Gx12.Launcher.Wpf/ViewModels/: MainViewModel.cs  ObservableObject.cs  PlaybackBindingViewModel.cs  ProfileEditorViewModel.cs  RelayCommand.cs
docs/: architecture.md  firmware-source.md  licensing.md  release-packages.md  tx16s-experimental-firmware.md
firmware/: README.md
firmware/edgetx-gx12-2.11.0/cmake/: Macros.cmake
firmware/edgetx-gx12-2.11.0/radio/src/: CMakeLists.txt  main.cpp  mixer.cpp  mixer_scheduler.cpp  sbus.cpp  sbus.h  serial.cpp  trainer.cpp  trainer.h
firmware/edgetx-gx12-2.11.0/radio/src/gui/: gui_common.cpp
firmware/edgetx-gx12-2.11.0/radio/src/gui/colorlcd/radio/: radio_trainer.cpp
firmware/edgetx-gx12-2.11.0/radio/src/gui/common/stdlcd/: radio_trainer.cpp
firmware/edgetx-gx12-2.11.0/radio/src/hal/: usb_driver.h
firmware/edgetx-gx12-2.11.0/radio/src/targets/common/arm/stm32/: CMakeLists.txt  usb_conf.h  usb_driver.cpp  usbd_cdc.cpp  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_hid_joystick.c
firmware/experimental-tx16s/: README.md  tx16smk3-asukaflight-composite-cdc-hid-resolution2x-pre-3.0.0-EXPERIMENTAL-UNTESTED-8CC87AA0.uf2
profiles/: whoop-linear.toml
src/: main.cpp
tests/Gx12.Launcher.Tests/: Gx12.Launcher.Tests.csproj  Program.cs
tools/: gx12-launcher-backend.ps1  gx12-launcher-v3.ps1  publish-gx12-distribution.ps1  publish-gx12-release.ps1  update-gx12-release-firmware.ps1
